Update index.html for Google Verification

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/heart.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="google-site-verification" content="T9-4LWL28EihGSV0NLFMfXi3tl8iX8bBQC5xwCI0xhI" />
     <meta
       name="description"
       content="Web site created using create-react-app"
